--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "twit-card",
   "version": "0.1.0",
+  "homepage": "https://VeronikaSavluk.github.io/tech-tasks-twit-cards/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
