--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,5 @@
 {
-  "short_name": "Twit cards",
-  "name": "Create Twit cards",
+  "name": "Twit cards",
   "icons": [
     {
       "src": "favicon.ico",
