--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,5 @@
 {
-  "short_name": "Twit cards",
-  "name": "Create Twit cards",
+  "name": "Twit cards",
   "icons": [
     {
       "src": "favicon.ico",
@@ -17,9 +16,5 @@
       "type": "image/png",
       "sizes": "512x512"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
