--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint:js": "eslint src/**/*.{js,jsx}",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
