--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twit-card",
+  "name": "tech-tasks-twit-cards",
   "version": "0.1.0",
   "homepage": "https://VeronikaSavluk.github.io/tech-tasks-twit-cards/",
     "dependencies": {
